# pwvucontrol

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .prettierrc.json  .taplo.toml  Cargo.toml  README.md  Release steps.txt  build.rs  com.saivert.pwvucontrol.json  meson.build  meson_options.txt  messages.po  rustfmt.toml
.github/workflows/: flatpak.yml
build-aux/: 0001-node-cast-proxy-to-pw_node-when-calling-pw_node-func.patch  blame-ignore.sh  cargo-sources.json  com.saivert.pwvucontrol.json  flatpak-cargo-generator.py  make-locale-dir.sh
data/: com.saivert.pwvucontrol.appdata.xml.in  com.saivert.pwvucontrol.desktop.in  com.saivert.pwvucontrol.desktop.in.in  com.saivert.pwvucontrol.gschema.xml  com.saivert.pwvucontrol.gschema.xml.in  com.saivert.pwvucontrol.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml
data/resources/ui/: channelbox.blp  channelbox.ui  devicebox.blp  devicebox.ui  help-overlay.blp  help-overlay.ui  levelbar.css  list.css  output-dropdown.ui  outputbox.ui  profile-dropdown.blp  profile-dropdown.ui  profilerow.blp  profilerow.ui  route-dropdown.blp  route-dropdown.ui  sinkbox.blp  sinkbox.ui  stream-dropdown.blp  stream-dropdown.ui  streambox.blp  streambox.ui  style.css  styling.css  volumebox.blp  volumebox.ui  volumescale.blp  volumescale.ui  window.blp  window.ui
po/: LINGUAS  POTFILES  en.po  fr.po  ka.po  meson.build  nb.po  nl.po  pl.po  pwvucontrol.pot  ru.po
src/: application.rs  channelbox.rs  config.rs  devicebox.rs  format.rs  levelprovider.rs  macros.rs  main.rs  manager.rs  meson.build  output_dropdown.rs  outputbox.rs  pipewire_connection.rs  profile_dropdown.rs  pwchannelobject.rs  pwdeviceobject.rs  pwnodemodel.rs  pwnodeobject.rs  pwprofileobject.rs  pwvucontrol.gresource.xml  sinkbox.rs  volumebox.rs  window.rs  window.ui  withdefaultlistmodel.rs
src/backend/: manager.rs  mod.rs  paramavailability.rs  pwchannelobject.rs  pwdeviceobject.rs  pwnodefiltermodel.rs  pwnodemodel.rs  pwnodeobject.rs  pwprofileobject.rs  pwroutefiltermodel.rs  pwrouteobject.rs  routedirection.rs
src/backend/pwnodeobject/: mixerapi.rs
src/gtk/: channelbox.ui  volumebox.ui  window.ui
src/pipewire_connection/: state.rs
src/pwnodeobject/: mixerapi.rs
src/ui/: channelbox.rs  devicebox.rs  levelprovider.rs  mod.rs  output_dropdown.rs  outputbox.rs  peak_meter_abstraction.rs  peakmeter.rs  profile_dropdown.rs  profilerow.rs  route_dropdown.rs  sinkbox.rs  stream_dropdown.rs  streambox.rs  utils.rs  volumebox.rs  volumescale.rs  window.rs  withdefaultlistmodel.rs
src/ui/volumebox/: mod.rs
src/volumebox/: mod.rs  output_dropdown.rs
