[package]
name = "pwvucontrol"
version = "0.5.1"
edition = "2021"
rust-version = "1.80"

[features]
sandboxed = []

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_12"] }
glib = { version = "0.19", features = ["log"] }
log = "0.4.11"
imbl = "3.0.0"
futures = "0.3"
anyhow = "1.0"
pipewire = "0.8"
formatx = "0.2.3"

[dependencies.wireplumber]
git = "https://github.com/arcnmx/wireplumber.rs.git"
rev = "ef3407c623840fa855dbe12c2574875e01ff361d"
features = ["v0_4_16"]

[dependencies.adw]
package = "libadwaita"
version = "0.6"
features = ["v1_4"]
